自动部署测试

--- a/docs/01-项目概述与架构.md
+++ b/docs/01-项目概述与架构.md
@@ -118,7 +118,7 @@ Migrations:     Prisma Migrate
 ### 3.2 目录结构
 
 ```
-data_analysis_agent/
+data_processing/
 ├── src/                          # Next.js 前端源码
 │   ├── app/                      # App Router 页面
 │   │   ├── (dashboard)/          # Dashboard路由组
