--- a/docs/04-数据库设计.md
+++ b/docs/04-数据库设计.md
@@ -4,11 +4,11 @@
 
 ### 1.1 技术选型
 
-| 组件 | 技术 | 说明 |
-|------|------|------|
-| ORM | Prisma 6.2.1 | 类型安全的数据库访问层 |
-| 开发数据库 | SQLite | 轻量级，无需配置 |
-| 生产数据库 | PostgreSQL | 高性能，适合生产环境 |
+| 组件       | 技术         | 说明                   |
+| ---------- | ------------ | ---------------------- |
+| ORM        | Prisma 6.2.1 | 类型安全的数据库访问层 |
+| 开发数据库 | SQLite       | 轻量级，无需配置       |
+| 生产数据库 | PostgreSQL   | 高性能，适合生产环境   |
 
 ### 1.2 配置文件位置
 
@@ -184,57 +184,61 @@ enum ReportStatus {
 
 **用途**: 存储用户账户信息
 
-| 字段 | 类型 | 约束 | 说明 |
-|------|------|------|------|
-| id | String | PK, CUID | 用户唯一标识 |
-| email | String | Unique | 邮箱地址 |
-| name | String? | Optional | 用户名 |
-| password | String | Required | 加密后的密码 |
-| avatar | String? | Optional | 头像URL |
-| role | Role | Default(USER) | 用户角色 |
-| createdAt | DateTime | Default(now) | 创建时间 |
-| updatedAt | DateTime | Auto | 更新时间 |
+| 字段      | 类型     | 约束          | 说明         |
+| --------- | -------- | ------------- | ------------ |
+| id        | String   | PK, CUID      | 用户唯一标识 |
+| email     | String   | Unique        | 邮箱地址     |
+| name      | String?  | Optional      | 用户名       |
+| password  | String   | Required      | 加密后的密码 |
+| avatar    | String?  | Optional      | 头像URL      |
+| role      | Role     | Default(USER) | 用户角色     |
+| createdAt | DateTime | Default(now)  | 创建时间     |
+| updatedAt | DateTime | Auto          | 更新时间     |
 
 **关联关系**:
+
 - 一对多: `sessions` - 用户会话
 - 一对多: `uploadedFiles` - 上传的文件
 - 一对多: `reports` - 生成的报告
 
 **索引**:
+
 - `email` - 加速登录查询
 
 ### 3.2 Session (会话模型)
 
 **用途**: 管理用户登录会话
 
-| 字段 | 类型 | 约束 | 说明 |
-|------|------|------|------|
-| id | String | PK, CUID | 会话唯一标识 |
-| token | String | Unique | JWT令牌 |
-| userId | String | FK | 关联用户ID |
-| expiresAt | DateTime | Required | 过期时间 |
-| createdAt | DateTime | Default(now) | 创建时间 |
+| 字段      | 类型     | 约束         | 说明         |
+| --------- | -------- | ------------ | ------------ |
+| id        | String   | PK, CUID     | 会话唯一标识 |
+| token     | String   | Unique       | JWT令牌      |
+| userId    | String   | FK           | 关联用户ID   |
+| expiresAt | DateTime | Required     | 过期时间     |
+| createdAt | DateTime | Default(now) | 创建时间     |
 
 **关联关系**:
+
 - 多对一: `user` - 所属用户 (级联删除)
 
 ### 3.3 UploadedFile (上传文件模型)
 
 **用途**: 记录用户上传的Excel文件
 
-| 字段 | 类型 | 约束 | 说明 |
-|------|------|------|------|
-| id | String | PK, CUID | 文件唯一标识 |
-| name | String | Required | 原始文件名 |
-| path | String | Required | 服务器存储路径 |
-| size | Int | Required | 文件大小(字节) |
-| mimeType | String | Required | MIME类型 |
-| userId | String | FK | 上传用户ID |
-| status | FileStatus | Default(PENDING) | 处理状态 |
-| createdAt | DateTime | Default(now) | 上传时间 |
-| updatedAt | DateTime | Auto | 更新时间 |
+| 字段      | 类型       | 约束             | 说明           |
+| --------- | ---------- | ---------------- | -------------- |
+| id        | String     | PK, CUID         | 文件唯一标识   |
+| name      | String     | Required         | 原始文件名     |
+| path      | String     | Required         | 服务器存储路径 |
+| size      | Int        | Required         | 文件大小(字节) |
+| mimeType  | String     | Required         | MIME类型       |
+| userId    | String     | FK               | 上传用户ID     |
+| status    | FileStatus | Default(PENDING) | 处理状态       |
+| createdAt | DateTime   | Default(now)     | 上传时间       |
+| updatedAt | DateTime   | Auto             | 更新时间       |
 
 **关联关系**:
+
 - 多对一: `user` - 上传者
 - 一对多: `analysisResults` - 分析结果
 - 一对多: `reports` - 生成的报告
@@ -243,17 +247,18 @@ enum ReportStatus {
 
 **用途**: 存储Excel数据分析结果
 
-| 字段 | 类型 | 约束 | 说明 |
-|------|------|------|------|
-| id | String | PK, CUID | 结果唯一标识 |
-| fileId | String | FK | 关联文件ID |
-| type | String | Required | 分析类型 |
-| data | String | Required | JSON格式分析数据 |
-| stats | String | Required | JSON格式统计信息 |
-| insights | String? | Optional | JSON格式洞察 |
-| createdAt | DateTime | Default(now) | 创建时间 |
+| 字段      | 类型     | 约束         | 说明             |
+| --------- | -------- | ------------ | ---------------- |
+| id        | String   | PK, CUID     | 结果唯一标识     |
+| fileId    | String   | FK           | 关联文件ID       |
+| type      | String   | Required     | 分析类型         |
+| data      | String   | Required     | JSON格式分析数据 |
+| stats     | String   | Required     | JSON格式统计信息 |
+| insights  | String?  | Optional     | JSON格式洞察     |
+| createdAt | DateTime | Default(now) | 创建时间         |
 
 **data字段结构示例**:
+
 ```json
 {
   "sheets": [
@@ -276,18 +281,18 @@ enum ReportStatus {
 
 **用途**: 记录生成的分析报告
 
-| 字段 | 类型 | 约束 | 说明 |
-|------|------|------|------|
-| id | String | PK, CUID | 报告唯一标识 |
-| name | String | Required | 报告名称 |
-| type | ReportType | Required | 报告类型(DOCX/PPTX/PDF) |
-| path | String | Required | 报告文件路径 |
-| fileId | String | FK | 源文件ID |
-| userId | String | FK | 创建者ID |
-| status | ReportStatus | Default(PENDING) | 生成状态 |
-| metadata | String? | Optional | JSON格式元数据 |
-| createdAt | DateTime | Default(now) | 创建时间 |
-| completedAt | DateTime? | Optional | 完成时间 |
+| 字段        | 类型         | 约束             | 说明                    |
+| ----------- | ------------ | ---------------- | ----------------------- |
+| id          | String       | PK, CUID         | 报告唯一标识            |
+| name        | String       | Required         | 报告名称                |
+| type        | ReportType   | Required         | 报告类型(DOCX/PPTX/PDF) |
+| path        | String       | Required         | 报告文件路径            |
+| fileId      | String       | FK               | 源文件ID                |
+| userId      | String       | FK               | 创建者ID                |
+| status      | ReportStatus | Default(PENDING) | 生成状态                |
+| metadata    | String?      | Optional         | JSON格式元数据          |
+| createdAt   | DateTime     | Default(now)     | 创建时间                |
+| completedAt | DateTime?    | Optional         | 完成时间                |
 
 ---
 
@@ -388,19 +393,22 @@ enum ReportStatus {
 
 ```typescript
 // src/lib/prisma.ts
-import { PrismaClient } from '@prisma/client';
+import { PrismaClient } from "@prisma/client";
 
 const globalForPrisma = globalThis as unknown as {
   prisma: PrismaClient | undefined;
 };
 
-export const prisma = globalForPrisma.prisma ?? new PrismaClient({
-  log: process.env.NODE_ENV === 'development' 
-    ? ['query', 'error', 'warn'] 
-    : ['error'],
-});
+export const prisma =
+  globalForPrisma.prisma ??
+  new PrismaClient({
+    log:
+      process.env.NODE_ENV === "development"
+        ? ["query", "error", "warn"]
+        : ["error"],
+  });
 
-if (process.env.NODE_ENV !== 'production') {
+if (process.env.NODE_ENV !== "production") {
   globalForPrisma.prisma = prisma;
 }
 ```
@@ -408,19 +416,20 @@ if (process.env.NODE_ENV !== 'production') {
 ### 6.2 常用查询示例
 
 #### 用户认证
+
 ```typescript
 // 用户注册
 const user = await prisma.user.create({
   data: {
-    email: 'user@example.com',
-    name: 'Test User',
+    email: "user@example.com",
+    name: "Test User",
     password: hashedPassword,
   },
 });
 
 // 用户登录查询
 const user = await prisma.user.findUnique({
-  where: { email: 'user@example.com' },
+  where: { email: "user@example.com" },
   include: { sessions: true },
 });
 
@@ -435,14 +444,16 @@ const session = await prisma.session.create({
 ```
 
 #### 文件操作
+
 ```typescript
 // 记录上传文件
 const file = await prisma.uploadedFile.create({
   data: {
-    name: 'data.xlsx',
-    path: '/uploads/user123/abc.xlsx',
+    name: "data.xlsx",
+    path: "/uploads/user123/abc.xlsx",
     size: 102400,
-    mimeType: 'application/vnd.openxmlformats-officedocument.spreadsheetml.sheet',
+    mimeType:
+      "application/vnd.openxmlformats-officedocument.spreadsheetml.sheet",
     userId: user.id,
   },
 });
@@ -450,27 +461,28 @@ const file = await prisma.uploadedFile.create({
 // 更新文件状态
 await prisma.uploadedFile.update({
   where: { id: fileId },
-  data: { status: 'COMPLETED' },
+  data: { status: "COMPLETED" },
 });
 
 // 查询用户文件列表
 const files = await prisma.uploadedFile.findMany({
-  where: { 
+  where: {
     userId: user.id,
-    status: 'COMPLETED'
+    status: "COMPLETED",
   },
-  orderBy: { createdAt: 'desc' },
+  orderBy: { createdAt: "desc" },
   take: 20,
 });
 ```
 
 #### 分析结果
+
 ```typescript
 // 保存分析结果
 const result = await prisma.analysisResult.create({
   data: {
     fileId: file.id,
-    type: 'gene_editing',
+    type: "gene_editing",
     data: JSON.stringify(analysisData),
     stats: JSON.stringify(statsData),
     insights: JSON.stringify(insights),
@@ -480,21 +492,22 @@ const result = await prisma.analysisResult.create({
 // 查询文件的分析结果
 const results = await prisma.analysisResult.findMany({
   where: { fileId: file.id },
-  orderBy: { createdAt: 'desc' },
+  orderBy: { createdAt: "desc" },
 });
 ```
 
 #### 报告操作
+
 ```typescript
 // 创建报告记录
 const report = await prisma.report.create({
   data: {
-    name: '基因编辑分析报告',
-    type: 'DOCX',
-    path: '/reports/report_123.docx',
+    name: "基因编辑分析报告",
+    type: "DOCX",
+    path: "/reports/report_123.docx",
     fileId: file.id,
     userId: user.id,
-    status: 'GENERATING',
+    status: "GENERATING",
   },
 });
 
@@ -502,7 +515,7 @@ const report = await prisma.report.create({
 await prisma.report.update({
   where: { id: report.id },
   data: {
-    status: 'COMPLETED',
+    status: "COMPLETED",
     completedAt: new Date(),
   },
 });
@@ -513,7 +526,7 @@ const reports = await prisma.report.findMany({
   include: {
     file: { select: { name: true } },
   },
-  orderBy: { createdAt: 'desc' },
+  orderBy: { createdAt: "desc" },
 });
 ```
 
@@ -525,12 +538,13 @@ const result = await prisma.$transaction(async (tx) => {
   // 创建文件记录
   const file = await tx.uploadedFile.create({
     data: {
-      name: 'data.xlsx',
+      name: "data.xlsx",
       path: filePath,
       size: fileSize,
-      mimeType: 'application/vnd.openxmlformats-officedocument.spreadsheetml.sheet',
+      mimeType:
+        "application/vnd.openxmlformats-officedocument.spreadsheetml.sheet",
       userId: userId,
-      status: 'PROCESSING',
+      status: "PROCESSING",
     },
   });
 
@@ -538,7 +552,7 @@ const result = await prisma.$transaction(async (tx) => {
   const analysis = await tx.analysisResult.create({
     data: {
       fileId: file.id,
-      type: 'initial',
+      type: "initial",
       data: JSON.stringify(initialData),
       stats: JSON.stringify({}),
     },
@@ -547,7 +561,7 @@ const result = await prisma.$transaction(async (tx) => {
   // 更新文件状态
   await tx.uploadedFile.update({
     where: { id: file.id },
-    data: { status: 'COMPLETED' },
+    data: { status: "COMPLETED" },
   });
 
   return { file, analysis };
@@ -667,6 +681,7 @@ CREATE INDEX "reports_status_idx" ON "reports"("status");
 ### 8.1 PostgreSQL配置
 
 修改 `prisma/schema.prisma`:
+
 ```prisma
 datasource db {
   provider = "postgresql"
@@ -681,7 +696,7 @@ datasource db {
 DATABASE_URL="file:./dev.db"
 
 # 生产环境 (PostgreSQL)
-DATABASE_URL="postgresql://user:password@localhost:5432/data_analysis_agent?schema=public"
+DATABASE_URL="postgresql://user:password@localhost:5432/data_processing?schema=public"
 ```
 
 ### 8.3 连接池配置
@@ -694,7 +709,7 @@ export const prisma = new PrismaClient({
       url: process.env.DATABASE_URL,
     },
   },
-  log: ['error'],
+  log: ["error"],
 });
 ```
 
@@ -702,12 +717,12 @@ export const prisma = new PrismaClient({
 
 ## 9. 相关文档
 
-| 文档 | 描述 |
-|------|------|
-| [01-项目概述与架构](./01-项目概述与架构.md) | 项目整体架构 |
-| [03-后端服务详解](./03-后端服务详解.md) | 后端API实现 |
-| [06-部署与配置](./06-部署与配置.md) | 数据库部署配置 |
+| 文档                                        | 描述           |
+| ------------------------------------------- | -------------- |
+| [01-项目概述与架构](./01-项目概述与架构.md) | 项目整体架构   |
+| [03-后端服务详解](./03-后端服务详解.md)     | 后端API实现    |
+| [06-部署与配置](./06-部署与配置.md)         | 数据库部署配置 |
 
 ---
 
-*文档版本: 1.0.0 | 更新时间: 2026-02-10*
+_文档版本: 1.0.0 | 更新时间: 2026-02-10_
