--- a/docs/06-部署与配置.md
+++ b/docs/06-部署与配置.md
@@ -32,12 +32,12 @@
 
 ### 1.2 部署方式
 
-| 方式 | 适用场景 | 复杂度 |
-|------|----------|--------|
-| Docker Compose | 单机部署、开发测试 | 低 |
-| 1Panel面板 | 可视化管理部署 | 低 |
-| Kubernetes | 大规模生产环境 | 高 |
-| 手动部署 | 自定义环境 | 中 |
+| 方式           | 适用场景           | 复杂度 |
+| -------------- | ------------------ | ------ |
+| Docker Compose | 单机部署、开发测试 | 低     |
+| 1Panel面板     | 可视化管理部署     | 低     |
+| Kubernetes     | 大规模生产环境     | 高     |
+| 手动部署       | 自定义环境         | 中     |
 
 ---
 
@@ -143,7 +143,7 @@ CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
 
 ```yaml
 # docker-compose.yml
-version: '3.8'
+version: "3.8"
 
 services:
   # Next.js前端应用
@@ -258,7 +258,7 @@ PORT=3000
 DATABASE_URL="file:./prisma/dev.db"
 
 # PostgreSQL (生产环境)
-# DATABASE_URL="postgresql://user:password@localhost:5432/data_analysis_agent?schema=public"
+# DATABASE_URL="postgresql://user:password@localhost:5432/data_processing?schema=public"
 
 # ==================== 认证配置 ====================
 JWT_SECRET=your-super-secret-jwt-key-at-least-32-characters
@@ -293,18 +293,18 @@ LOG_LEVEL=info
 
 ### 3.2 环境变量说明
 
-| 变量 | 必需 | 默认值 | 说明 |
-|------|------|--------|------|
-| `NODE_ENV` | 是 | development | 运行环境 |
-| `DATABASE_URL` | 是 | - | 数据库连接字符串 |
-| `JWT_SECRET` | 是 | - | JWT签名密钥(≥32字符) |
-| `PYTHON_SERVICE_URL` | 是 | - | Python服务地址 |
-| `OPENAI_API_KEY` | 是* | - | OpenAI API密钥 |
-| `OPENAI_BASE_URL` | 否 | https://api.openai.com/v1 | OpenAI API地址 |
-| `OPENAI_MODEL` | 否 | gpt-4 | 使用的模型 |
-| `LLM_PROVIDER` | 否 | openai | LLM提供商 |
+| 变量                 | 必需 | 默认值                    | 说明                 |
+| -------------------- | ---- | ------------------------- | -------------------- |
+| `NODE_ENV`           | 是   | development               | 运行环境             |
+| `DATABASE_URL`       | 是   | -                         | 数据库连接字符串     |
+| `JWT_SECRET`         | 是   | -                         | JWT签名密钥(≥32字符) |
+| `PYTHON_SERVICE_URL` | 是   | -                         | Python服务地址       |
+| `OPENAI_API_KEY`     | 是\* | -                         | OpenAI API密钥       |
+| `OPENAI_BASE_URL`    | 否   | https://api.openai.com/v1 | OpenAI API地址       |
+| `OPENAI_MODEL`       | 否   | gpt-4                     | 使用的模型           |
+| `LLM_PROVIDER`       | 否   | openai                    | LLM提供商            |
 
-*如果使用通义千问，则`DASHSCOPE_API_KEY`必需
+\*如果使用通义千问，则`DASHSCOPE_API_KEY`必需
 
 ### 3.3 创建环境文件
 
@@ -330,6 +330,7 @@ vi .env.production
 **基本流程:**
 
 1. **安装1Panel面板**
+
 ```bash
 curl -sSL https://resource.fit2cloud.com/1panel/package/quick_start.sh -o quick_start.sh && sudo bash quick_start.sh
 ```
@@ -389,7 +390,7 @@ sudo yum install -y nodejs npm python3 python3-pip
 ```bash
 # 克隆项目
 git clone <repository-url>
-cd data_analysis_agent
+cd data_processing
 
 # 安装依赖
 npm install
@@ -582,12 +583,12 @@ sudo apt install postgresql postgresql-contrib
 # 创建用户和数据库
 sudo -u postgres psql
 CREATE USER datauser WITH PASSWORD 'your-password';
-CREATE DATABASE data_analysis_agent OWNER datauser;
-GRANT ALL PRIVILEGES ON DATABASE data_analysis_agent TO datauser;
+CREATE DATABASE data_processing OWNER datauser;
+GRANT ALL PRIVILEGES ON DATABASE data_processing TO datauser;
 \q
 
 # 环境变量
-DATABASE_URL="postgresql://datauser:your-password@localhost:5432/data_analysis_agent?schema=public"
+DATABASE_URL="postgresql://datauser:your-password@localhost:5432/data_processing?schema=public"
 
 # 修改prisma/schema.prisma
 datasource db {
@@ -715,13 +716,13 @@ tar -xzf /opt/backups/reports_20260210.tar.gz -C /opt/data-analysis-agent/python
 
 ### 10.1 常见问题
 
-| 问题 | 可能原因 | 解决方案 |
-|------|----------|----------|
-| 服务启动失败 | 端口占用 | `lsof -i :3000` 检查并释放端口 |
-| 数据库连接失败 | DATABASE_URL错误 | 检查环境变量和数据库状态 |
-| AI生成失败 | API密钥无效 | 验证OPENAI_API_KEY |
-| 文件上传失败 | 目录权限 | `chmod 755 uploads/` |
-| 内存溢出 | 内存不足 | 增加服务器内存或优化配置 |
+| 问题           | 可能原因         | 解决方案                       |
+| -------------- | ---------------- | ------------------------------ |
+| 服务启动失败   | 端口占用         | `lsof -i :3000` 检查并释放端口 |
+| 数据库连接失败 | DATABASE_URL错误 | 检查环境变量和数据库状态       |
+| AI生成失败     | API密钥无效      | 验证OPENAI_API_KEY             |
+| 文件上传失败   | 目录权限         | `chmod 755 uploads/`           |
+| 内存溢出       | 内存不足         | 增加服务器内存或优化配置       |
 
 ### 10.2 调试命令
 
@@ -774,12 +775,12 @@ df -h
 
 ## 12. 相关文档
 
-| 文档 | 描述 |
-|------|------|
-| [01-项目概述与架构](./01-项目概述与架构.md) | 项目整体架构 |
-| [DEPLOY_GUIDE.md](../DEPLOY_GUIDE.md) | 简化部署指南 |
-| [DEPLOY_1PANEL.md](../DEPLOY_1PANEL.md) | 1Panel部署指南 |
+| 文档                                        | 描述           |
+| ------------------------------------------- | -------------- |
+| [01-项目概述与架构](./01-项目概述与架构.md) | 项目整体架构   |
+| [DEPLOY_GUIDE.md](../DEPLOY_GUIDE.md)       | 简化部署指南   |
+| [DEPLOY_1PANEL.md](../DEPLOY_1PANEL.md)     | 1Panel部署指南 |
 
 ---
 
-*文档版本: 1.0.0 | 更新时间: 2026-02-10*
+_文档版本: 1.0.0 | 更新时间: 2026-02-10_
